# dbtui

./: .gitignore  CHANGELOG.md  Cargo.toml  KEYBINDINGS.md  README.md
.claude/: claude-instructions.md  task.md
src/: main.rs
src/core/: adapter.rs  connection.rs  error.rs  mod.rs  models.rs  storage.rs  validator.rs  virtual_fs.rs
src/drivers/: mod.rs
src/drivers/mysql/: adapter.rs  mod.rs
src/drivers/oracle/: adapter.rs  mod.rs
src/drivers/postgres/: adapter.rs
src/keybindings/: defaults.rs  mod.rs  parser.rs
src/sql_engine/: analyzer.rs  completion.rs  context.rs  diagnostics.rs  dialect.rs  metadata.rs  mod.rs  models.rs  tokenizer.rs
src/ui/: app.rs  completion.rs  diagnostics.rs  events.rs  layout.rs  loading.rs  mod.rs  sql_highlighter.rs  sql_tokens.rs  state.rs  theme.rs
src/ui/app/: actions.rs  connections.rs  message_helpers.rs  messages.rs  mod.rs  persistence.rs  schema_handlers.rs  spawns.rs  tabs.rs  vfs.rs
src/ui/events/: editor.rs  grid.rs  inline_conn.rs  leader.rs  mod.rs  oil.rs  overlays.rs  scripts.rs  sidebar.rs
src/ui/layout/: mod.rs  overlays.rs  tabs.rs
src/ui/state/: connection.rs  dialogs.rs  mod.rs  scripts.rs  tree.rs
src/ui/tabs/: mod.rs  workspace_tab.rs
src/ui/vim/: buffer.rs  input.rs  mod.rs  motions.rs  operators.rs  render.rs
src/ui/widgets/: conn_menu.rs  connection_dialog.rs  data_grid.rs  group_menu.rs  help.rs  inline_conn.rs  mod.rs  oil_navigator.rs  package_viewer.rs  properties.rs  query_editor.rs  schema_filter.rs  sidebar.rs  statusbar.rs
