[package]
name = "dbtui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql"] }
oracle = "0.6"

# Trait abstractions & error handling
async-trait = "0.1"
thiserror = "1"

# Serialization (connection configs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage & encryption
directories = "5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Export/import
tar = "0.4"
flate2 = "1"
