[package]
name = "dbtui"
version = "0.1.0"
edition = "2024"
description = "Terminal database client with Vim-style navigation"
license = "MIT"
authors = ["Juan Diego Rincon Franco"]
repository = "https://github.com/Di3go0-0/dbtui"
keywords = ["database", "tui", "terminal", "sql", "vim"]
categories = ["command-line-utilities", "database"]

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql"] }
oracle = "0.6"

# Trait abstractions & error handling
async-trait = "0.1"
thiserror = "1"

# Serialization (connection configs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage & encryption
directories = "5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# SQL parsing / validation
sqlparser = "0.44"

# Export/import
tar = "0.4"
flate2 = "1"
