[package]
name = "dbtui"
version = "0.2.3"
edition = "2024"
description = "Terminal database client with Vim-style navigation"
license = "MIT"
authors = ["Juan Diego Rincon Franco"]
repository = "https://github.com/Di3go0-0/dbtui"
homepage = "https://github.com/Di3go0-0/dbtui"
documentation = "https://docs.rs/dbtui"
readme = "README.md"
keywords = ["database", "tui", "terminal", "sql", "vim"]
categories = ["command-line-utilities", "database"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
vimltui = { path = "../vimltui" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "chrono"] }
oracle = "0.6"
chrono = "0.4"

# Trait abstractions & error handling
async-trait = "0.1"
thiserror = "1"

# Serialization (connection configs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage & encryption
directories = "5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# SQL parsing / validation
sqlparser = "0.44"

# Export/import
tar = "0.4"
flate2 = "1"
futures-util = { version = "0.3.32", default-features = false }

[profile.release]
strip = true
lto = true
